[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.13"
tonic = "0.12"
tonic-build = "0.12"
quinn = "0.11"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
rand = "0.8"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
dashmap = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
prost-types = "0.13"
