[package]
name = "blaster-server"
version = "0.1.0"
edition = "2024"

[dependencies]
blaster-common = { path = "../blaster-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = "0.1"
